Add functionality to skills that player can use.

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,12 @@
       <h1><div id="char-name">Name</div></h1>
       <h3><div id="char-hp">0</div></h3>
       <h3><div id="char-resource">0</div></h3>
-      <div id="class-ability-list">
-      </div>
+      <div id="class-ability-list"></div>
     </div>
     <div id="monster-info" class="hidden">
       <h1><div id="monster-name">Name</div></h1>
       <h3><div id="monster-hp">0</div></h3>
     </div>
-    <p><div id="test"></div></p>
+    <div id="combat-log"></div>
   </body>
 </html>
