Add player stats, current exp and level.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,15 @@
       <h1><div id="char-name">Name</div></h1>
       <h3><div id="char-hp">0</div></h3>
       <h3><div id="char-resource">0</div></h3>
-      <div id="class-ability-list"></div>
+      <h3><div id="char-lvl">0</div></h3>
+      <h3><div id="char-exp">0</div></h3>
+      <h3><div id="char-int">0</div></h3>
+      <h3><div id="char-str">0</div></h3>
+      <h3><div id="char-end">0</div></h3>
+      <br/>
+      <div id="class-ability-list">
+        <h3>Player Skills</h3>
+      </div>
     </div>
     <div id="monster-info" class="hidden">
       <h1><div id="monster-name">Name</div></h1>
