Add defense display.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <div id="char-info" class="hidden">
       <h1><div id="char-name">Name</div></h1>
       <h3><div id="char-hp">0</div></h3>
+      <h3><div id="char-def">0</div></h3>
       <h3><div id="char-resource">0</div></h3>
       <h3><div id="char-lvl">0</div></h3>
       <h3><div id="char-exp">0</div></h3>
